--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section>
+  <section class="section-card">
     <div class="container">
       <div class="card">
         <div class="info">
